--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="bio">
         <h2>About Me</h2>
         <p>Hello! My name is Asgat and surname is Keruly. I am 19 years old. I am currently studying in Innopolis University
-            at the first course. I have experience in programming languages such as Java, C++/C, Python, Kumir, HTML, CSS.
+            at the first course. I have experience in programming languages such as Java, C++/C, Python, KuMir, HTML, CSS.
             I have done some <a class="project-link" href="https://github.com/mpasgat/Projects.git">projects</a>  that deals with different difficult tasks. </p>
     </section>
 
