--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             margin: auto;
             overflow: hidden;
         }
-        .bio {
+        .bio, .projects {
             padding: 20px;
             background: white;
             margin-top: 20px;
@@ -48,23 +48,43 @@
 <main>
 <div class="container">
     <section class="bio">
-        <h2>About Me</h2>
+        <h4>About Me</h4>
         <p>Hello! My name is Asgat and surname is Keruly. I am 19 years old. I am currently studying in Innopolis University
             at the first course. I have experience in programming languages such as Java, C/C++, Python, KuMir, HTML, CSS.
             I have done some <a class="project-link" href="https://github.com/mpasgat/Projects.git">projects</a>  that deals with different difficult tasks. </p>
     </section>
 
+    <section class="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Simulation of a medieval fantasy story that was written in C++ using shared pointers. This program create characters, weapons, and spells that interact within a dynamic story.
+                The story progresses through a series of events such as attacks, spawns, and deaths, with each event written to an output file to narrate the unfolding adventure.
+
+            </li>
+            <li>
+                Simplified Banking System that was written in Java. This program is focused on creating a non-interactive system that processes a series of banking operations.
+
+            </li>
+            <li>
+                Sports Team Management System that was written in C. This program handle a team of players, with each player having different attributes including their position on the field.
+                The system will allow the user to add players, delete players, display team details, and search for a specific player.</li>
+
+            <li>
+                Online Book Store that was written in Java. This program support book insertion, controlling access to books, users subscriptions,
+                and notifying users about books updates.
+            </li>
+        </ul>
+    </section>
+
+
+
     <section class="social-icons">
-        <h3> Contacts</h3>
+        <h3>Contacts</h3>
         <a id="gh-link" href="https://github.com/mpasgat"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" width="30" height="30" alt="GitHub"></a>
         <a id="tg-link" href="https://t.me/east511"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" width="30" height="30" alt="Telegram"></a>
         <a id="email" href="mailto:asgatk5@gmail.com"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" width="30" height="30"></a>
     </section>
 </div>
 </main>
-
 </body>
-
-
-
 </html>
